Force Expo cache bust - add web bundler config
Add web bundler config

--- a/app.json
+++ b/app.json
@@ -37,8 +37,10 @@
       ]
     },
     "web": {
-      "favicon": "./assets/images/favicon.png"
-    },
+  "favicon": "./assets/images/favicon.png",
+  "bundler": "metro",
+  "output": "single"
+},
     "plugins": [
       [
         "expo-router",
